fixed z-index for images on hover for bigger screens to avoid hiding a part of the picture underneath the next pic

--- a/sprint-1/stylesheets/sass/main.scss
+++ b/sprint-1/stylesheets/sass/main.scss
@@ -210,6 +210,7 @@ html {
         &:hover {
             filter: grayscale(0);
             transform: scale(1.1);
+            z-index: 100;
         }
     }
 
